implementing home layout, beginning details layout

--- a/CIM/CIM/Pages/Index.cshtml
+++ b/CIM/CIM/Pages/Index.cshtml
@@ -5,6 +5,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="">CIM</h1>
+    <form>
+        <label for="fname">Enter/Scan Device Service Tag:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <input type="submit" value="Search">
+    </form>
 </div>
