--- a/CIM/CIM/wwwroot/css/site.css
+++ b/CIM/CIM/wwwroot/css/site.css
@@ -1,3 +1,5 @@
+
+
 html {
   font-size: 14px;
 }
@@ -18,5 +20,6 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: 'Myriad W01 Regular'
 }
