wireframing details page

--- a/CIM/CIM/Pages/Details.cshtml
+++ b/CIM/CIM/Pages/Details.cshtml
@@ -1,13 +1,44 @@
 ﻿@page
 @model CIM.Pages.DetailsModel
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "CHASXXXX";
 }
 
 <h1>CHASXXXX</h1>
 
 <div>
-    <h4>Computer</h4>
+    <table style="width:100%">
+        <tr>
+            <th>Image Status</th>
+        </tr>
+        <tr>
+            <td>pull image status here</td>
+        </tr>
+        <tr>
+            <th>Last Imaged For</th>
+        </tr>
+        <tr>
+            <td>pull current/previous issue(s)(and maybe dates?) here</td>
+        </tr>
+        <tr>
+            <th>Current OU</th>
+        </tr>
+        <tr>
+            <td>pull ou here</td>
+        </tr>
+        <tr>
+            <th>Primary User</th>
+        </tr>
+        <tr>
+            <td>pull pu here</td>
+        </tr>
+        <tr>
+            <th>Warranty Status</th>
+        </tr>
+        <tr>
+            <td>pull warranty here</td>
+        </tr>
+    </table>
 </div>
 <div>
     
