wireframing create page

--- a/CIM/CIM/Pages/Shared/_Layout.cshtml
+++ b/CIM/CIM/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Details">SampleDetails</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Create">AddNewPC</a>
+                        </li>
                     </ul>
                 </div>
             </div>
