--- a/CIM/CIM/wwwroot/css/site.css
+++ b/CIM/CIM/wwwroot/css/site.css
@@ -1,7 +1,5 @@
-
-
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
@@ -21,5 +19,31 @@ html {
 
 body {
     margin-bottom: 60px;
-    font-family: 'Myriad W01 Regular'
+    font-family: 'Myriad W01 Regular';
+}
+
+table, th, td {
+    border-collapse: collapse;
+    border: 1px solid #ddd;
+    padding: 8px;
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+}
+
+td {
+    vertical-align: middle;
+}
+
+tr:hover td {
+    background-color: #c2e189;
+}
+tr:nth-child(even) {
+    background-color: #C3D0DB;
+}
+th {
+    height: 10px;
+    padding: 15px;
+    text-align: center;
+    background-color: #789d4a;
+    color: white;
 }
