--- a/CIM/CIM/Pages/Inventory.cshtml
+++ b/CIM/CIM/Pages/Inventory.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Inventory List";
 }
 <h1>Deployable Devices</h1>
-<table>
+<table id="inventory">
     <tr>
         <th>Name</th>
         <th>Service Tag</th>
