--- a/CIM/CIM/Pages/Details.cshtml
+++ b/CIM/CIM/Pages/Details.cshtml
@@ -1,4 +1,10 @@
 ﻿@page "{name}"
+
+@using System;
+@using System.Collections.Generic;
+@using System.Reflection;
+@using System.Text;
+
 @model CIM.Pages.DetailsModel
 @{
     ViewData["Title"] = RouteData.Values["deviceName"];
@@ -7,37 +13,22 @@
 <h1>@RouteData.Values["deviceName"]</h1>
 
 <div>
-    <table>
-        <tr>
-            <th>Image Status</th>
-        </tr>
-        <tr>
-            <td>pull image status here</td>
-        </tr>
-        <tr>
-            <th>Last Imaged For</th>
-        </tr>
-        <tr>
-            <td>pull current/previous issue(s)(and maybe dates?) here</td>
-        </tr>
-        <tr>
-            <th>Current OU</th>
-        </tr>
-        <tr>
-            <td>pull ou here</td>
-        </tr>
-        <tr>
-            <th>Primary User</th>
-        </tr>
-        <tr>
-            <td>pull pu here</td>
-        </tr>
-        <tr>
-            <th>Warranty Status</th>
-        </tr>
-        <tr>
-            <td>pull warranty here</td>
-        </tr>
+    <table id="details">
+        @{
+            foreach (PropertyInfo property in Model.PropertiesList)
+            {
+                if (property.Name != "Id")
+                {
+                    <tr>
+                        <th>@property.Name</th>
+                    </tr>
+                    <tr>
+                        <td>@property.GetValue(Model.Device, null)</td>
+                    </tr>
+                }
+                
+            }
+        }
     </table>
 </div>
 <div>
