--- a/CIM/CIM/Pages/Index.cshtml
+++ b/CIM/CIM/Pages/Index.cshtml
@@ -6,9 +6,10 @@
 
 <div class="text-center">
     <h1 class="">CIM</h1>
-    <form>
+    <form method="post">
         <label for="fname">Enter/Scan Device Service Tag:</label><br>
         <input type="text" id="fname" name="fname"><br>
-        <input type="submit" value="Search">
+        <button>Search</button>
     </form>
 </div>
+
