implementing search function

--- a/CIM/CIM/Pages/Index.cshtml
+++ b/CIM/CIM/Pages/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "CIM";
 }
 
 <div class="text-center">
     <h1 class="">CIM</h1>
     <form method="post">
-        <label for="fname">Enter/Scan Device Service Tag:</label><br>
-        <input type="text" id="fname" name="fname"><br>
-        <button>Search</button>
+        <label for="Device">Enter/Scan Device Service Tag:</label>
+        <input type="text" name="Device">
+        <button type="submit">Search</button>
     </form>
 </div>
 
