--- a/CIM/CIM/Pages/Index.cshtml
+++ b/CIM/CIM/Pages/Index.cshtml
@@ -10,7 +10,7 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
-<table class="table">
+<table id="inventory">
     <thead>
         <tr>
             <th>
@@ -18,16 +18,7 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Device[0].ServiceTag)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Device[0].OU)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Device[0].PU)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Device[0].PI)
-            </th>
+            </th>           
             <th>
                 @Html.DisplayNameFor(model => model.Device[0].Status)
             </th>
@@ -42,15 +33,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ServiceTag)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OU)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PU)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PI)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Status)
