--- a/CIM/CIM/Pages/Edit.cshtml
+++ b/CIM/CIM/Pages/Edit.cshtml
@@ -26,12 +26,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Device.OU" class="control-label"></label>
-                <input asp-for="Device.OU" class="form-control" />
+                <input asp-for="Device.OU" class="form-control" readonly/>
                 <span asp-validation-for="Device.OU" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div>
                 <label asp-for="Device.PU" class="control-label"></label>
-                <input asp-for="Device.PU" class="form-control" />
+                <input asp-for="Device.PU" class="form-control" readonly/>
                 <span asp-validation-for="Device.PU" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -41,7 +41,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Device.Status" class="control-label"></label>
-                <input asp-for="Device.Status" class="form-control" />
+                <select asp-for="Device.Status" asp-items="Model.statusList" class="status-select"></select>
                 <span asp-validation-for="Device.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
