--- a/CIM/CIM/Pages/Details.cshtml
+++ b/CIM/CIM/Pages/Details.cshtml
@@ -43,12 +43,32 @@
         </dd>
     </dl>
 </div>
-@foreach (var previousIssue in Model.Device.PreviousIssues)
-{
-    <div class="="mb-3">
-        <h5>@previousIssue.IssueType</h5>
-    </div>
-}
+
+
+<table id="inventory">
+    <thead>
+    <tr>
+        <th>Type</th>
+        <th>Details</th>
+        <th>Issue Date</th>
+        <th>Technician</th>
+    </tr>
+</thead>
+<tbody>
+    @foreach (var issue in Model.Device.PreviousIssues)
+    {
+        <tr>
+            <td>@issue.IssueType</td>
+            <td>@issue.IssueDetails</td>
+            <td>@issue.IssueDate</td>
+            <td>@issue.Technician</td>
+        </tr>
+    }
+</tbody>
+</table>
+
+
+
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Device?.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
