--- a/CIM/CIM/Pages/Details.cshtml
+++ b/CIM/CIM/Pages/Details.cshtml
@@ -48,10 +48,10 @@
 <table id="inventory">
     <thead>
     <tr>
-        <th>Type</th>
-        <th>Details</th>
-        <th>Issue Date</th>
-        <th>Technician</th>
+            <th onclick="sortTable(0)">Type</th>
+            <th onclick="sortTable(1)">Details</th>
+            <th onclick="sortTable(2)">Issue Date</th>
+            <th onclick="sortTable(3)">Technician</th>
     </tr>
 </thead>
 <tbody>
