--- a/CIM/CIM/Pages/PreviousIssues/Edit.cshtml
+++ b/CIM/CIM/Pages/PreviousIssues/Edit.cshtml
@@ -31,13 +31,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="PreviousIssue.IssueDate" class="control-label"></label>
-                <input asp-for="PreviousIssue.IssueDate" class="form-control" />
+                <input asp-for="PreviousIssue.IssueDate" class="form-control" readonly/>
                 <span asp-validation-for="PreviousIssue.IssueDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PreviousIssue.DeviceId" class="control-label"></label>
-                <select asp-for="PreviousIssue.DeviceId" class="form-control" asp-items="ViewBag.DeviceId"></select>
-                <span asp-validation-for="PreviousIssue.DeviceId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
