--- a/CIM/CIM/Pages/Devices/Details.cshtml
+++ b/CIM/CIM/Pages/Devices/Details.cshtml
@@ -42,7 +42,10 @@
             @Html.DisplayFor(model => model.Device.Status)
         </dd>
     </dl>
+    <a asp-page="./Edit" asp-route-id="@Model.Device?.Id">Edit</a>
 </div>
+
+<h2><a asp-page="/PreviousIssues/Create" asp-route-id=@Model.Device.Id>Log New Issue for @Model.Device.Name</a></h2>
 
 @if (Model.Device.PreviousIssues.Count >= 1)
 {
@@ -53,7 +56,7 @@
                 <th onclick="sortTable(1)">Details</th>
                 <th onclick="sortTable(2)">Issue Date</th>
                 <th onclick="sortTable(3)">Technician</th>
-                <th></th>
+                <th>Options</th>
             </tr>
         </thead>
         <tbody>
@@ -64,13 +67,12 @@
                     <td>@issue.IssueDetails</td>
                     <td>@issue.IssueDate</td>
                     <td>@issue.Technician</td>
-                    <td><a asp-page="/PreviousIssues/Edit" asp-route-id="@issue.Id">Edit</a></td>
+                    <td><a asp-page="/PreviousIssues/Edit" asp-route-id="@issue.Id">Edit</a> <a asp-page="/PreviousIssues/Delete" asp-route-id="@issue.Id">Delete</a></td>
                 </tr>
             }
         </tbody>
     </table>
 }
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Device?.Id">Edit</a> |
     <a asp-page="../Index">Back to List</a>
 </div>
