--- a/CIM/CIM/Pages/Devices/Edit.cshtml
+++ b/CIM/CIM/Pages/Devices/Edit.cshtml
@@ -47,7 +47,7 @@
 </div>
 
 <div>
-    <a asp-page="../Index">Back to List</a>
+    <a asp-page="/Devices/Details" asp-route-id="@Model.Device.Id">Back to List</a>
 </div>
 
 @section Scripts {
