--- a/CIM/CIM/Pages/PreviousIssues/Create.cshtml
+++ b/CIM/CIM/Pages/PreviousIssues/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id:int}"
 @model CIM.Pages.PreviousIssues.CreateModel
 
 @{
@@ -14,9 +14,11 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="PreviousIssue.IssueType" class="control-label"></label>
-                <input asp-for="PreviousIssue.IssueType" class="form-control" />
-                <span asp-validation-for="PreviousIssue.IssueType" class="text-danger"></span>
+                <label asp-for="PreviousIssue.IssueType" class="control-label"></label><br />
+                @foreach (var type in Model.issueTypes)
+                {
+                    <input type="radio" asp-for="PreviousIssue.IssueType" value="@type" />@type
+                }
             </div>
             <div class="form-group">
                 <label asp-for="PreviousIssue.IssueDetails" class="control-label"></label>
@@ -29,15 +31,6 @@
                 <span asp-validation-for="PreviousIssue.Technician" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PreviousIssue.IssueDate" class="control-label"></label>
-                <input asp-for="PreviousIssue.IssueDate" class="form-control" />
-                <span asp-validation-for="PreviousIssue.IssueDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PreviousIssue.DeviceId" class="control-label"></label>
-                <select asp-for="PreviousIssue.DeviceId" class ="form-control" asp-items="ViewBag.DeviceId"></select>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -45,6 +38,7 @@
 </div>
 
 <div>
+    
     <a asp-page="Index">Back to List</a>
 </div>
 
