--- a/CIM/CIM/Pages/PreviousIssues/Delete.cshtml
+++ b/CIM/CIM/Pages/PreviousIssues/Delete.cshtml
@@ -40,13 +40,13 @@
             @Html.DisplayNameFor(model => model.PreviousIssue.Device)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PreviousIssue.Device.Id)
+            @Html.DisplayFor(model => model.PreviousIssue.Device.Name)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="PreviousIssue.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="/Devices/Details" asp-route-id="@Model.PreviousIssue.DeviceId">Back to List</a>
     </form>
 </div>
