Add data validation when creating new devices.

--- a/CIM/CIM/Pages/Devices/Create.cshtml
+++ b/CIM/CIM/Pages/Devices/Create.cshtml
@@ -4,14 +4,13 @@
 @{
     ViewData["Title"] = "Create";
 }
-
 <h1>Create</h1>
 
 <h4>Device</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" asp-page="/Devices/Create" id="create-form">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Device.Name" class="control-label"></label>
@@ -39,7 +38,7 @@
                 <span asp-validation-for="Device.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <button type="submit" form="create-form" class="btn btn-primary">Create</button>
             </div>
         </form>
     </div>
