--- a/CIM/CIM/Pages/Devices/Details.cshtml
+++ b/CIM/CIM/Pages/Devices/Details.cshtml
@@ -1,42 +1,42 @@
-﻿@page
+﻿@page "{name}"
 @model CIM.Pages.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = Model.Device.Name;
 }
 
-<h1>Details</h1>
+<h1>@Model.Device.Name</h1>
 
 <div>
-    <h4>Device</h4>
+    <h4>Device Info:</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Device.Name)
+            @Html.DisplayNameFor(model => model.Device.Name):
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Device.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Device.ServiceTag)
+            @Html.DisplayNameFor(model => model.Device.ServiceTag):
         </dt>
         <dd class="col-sm-10">
             <a href='@string.Format("https://www.dell.com/support/home/en-us/product-support/servicetag/{0}/overview", Model.Device.ServiceTag)'>@Model.Device.ServiceTag</a>
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Device.OU)
+            @Html.DisplayNameFor(model => model.Device.OU):
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Device.OU)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Device.PU)
+            @Html.DisplayNameFor(model => model.Device.PU):
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Device.PU)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Device.Status)
+            @Html.DisplayNameFor(model => model.Device.Status):
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Device.Status)
@@ -67,7 +67,10 @@
                     <td>@issue.IssueDetails</td>
                     <td>@issue.IssueDate</td>
                     <td>@issue.Technician</td>
-                    <td><a asp-page="/PreviousIssues/Edit" asp-route-id="@issue.Id">Edit</a> <a asp-page="/PreviousIssues/Delete" asp-route-id="@issue.Id">Delete</a></td>
+                    <td>
+                        <a asp-page="/PreviousIssues/Edit" asp-route-id="@issue.Id">Edit</a>
+                        <a asp-page="/PreviousIssues/Delete" asp-route-id="@issue.Id">Delete</a>                        
+                    </td>
                 </tr>
             }
         </tbody>
