--- a/CIM/CIM/Pages/Index.cshtml
+++ b/CIM/CIM/Pages/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="\Devices\Create">Create New</a>
 </p>
 <table id="inventory">
     <thead>
@@ -39,7 +39,7 @@
             </td>
             <td>
                 <a asp-page="./Devices/Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Devices/Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-page="./Devices/Details" asp-route-name="@item.Name">Details</a> |
                 <a asp-page="./Devices/Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
