--- a/CIM/CIM/Pages/Devices/Details.cshtml
+++ b/CIM/CIM/Pages/Devices/Details.cshtml
@@ -41,6 +41,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Device.Status)
         </dd>
+        <dt class="col-sm-2">
+            Warranty Expiration:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.DeviceWarranty
+        </dd>
     </dl>
     <a asp-page="./Edit" asp-route-id="@Model.Device?.Id">Edit</a>
 </div>
