--- a/CIM/CIM/Pages/Index.cshtml
+++ b/CIM/CIM/Pages/Index.cshtml
@@ -48,7 +48,7 @@
                                 @Html.DisplayFor(modelItem => item.Status)
                             </td>
                             <td>
-                                <a asp-page="./Devices/Details" asp-route-name="@item.Name">Details</a> |
+                                <a asp-page="./Devices/Details" asp-route-id="@item.Id">Details</a> |
                                 <a asp-page="./Devices/Delete" asp-route-id="@item.Id">Delete</a>
                             </td>
                         </tr>
