--- a/CIM/CIM/Pages/PreviousIssues/Create.cshtml
+++ b/CIM/CIM/Pages/PreviousIssues/Create.cshtml
@@ -17,7 +17,11 @@
                 <label asp-for="PreviousIssue.IssueType" class="control-label"></label><br />
                 @foreach (var type in Model.issueTypes)
                 {
-                    <input type="radio" asp-for="PreviousIssue.IssueType" value="@type" />@type<br />
+                    <input type="radio" asp-for="PreviousIssue.IssueType" value="@type" />
+
+                    @type
+
+                    <br />
                 }
             </div>
             <div class="form-group">
@@ -38,10 +42,11 @@
 </div>
 
 <div>
-    
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="/Devices/Details" asp-route-id="@Model.id">Back to List</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
