Add deleted devices link.

--- a/CIM/CIM/Pages/Devices/Deleted.cshtml
+++ b/CIM/CIM/Pages/Devices/Deleted.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model CIM.Pages.Devices.DeletedDevicesModel
+@model CIM.Pages.Devices.DeletedModel
 
 @{
     ViewData["Title"] = "Deleted Devices";
