--- a/CIM/CIM/Pages/Index.cshtml
+++ b/CIM/CIM/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 <div id="index-header">
     <h1>Device Inventory</h1>
     <div class="input-group">
-        <input type="text" class="form-control" id="deviceSearch" onkeyup="searchTables()" placeholder="Search Inventory" style="padding-left: 3rem;">
+        <input type="text" class="form-control" id="deviceSearch" onkeyup="searchTables()" placeholder="Search Inventory..." style="padding-left: 3rem;">
     </div>
     <h1><a asp-page="\Devices\Create">Add New Device</a></h1>
 </div>
