--- a/CIM/CIM/wwwroot/css/site.css
+++ b/CIM/CIM/wwwroot/css/site.css
@@ -1,24 +1,24 @@
 html {
-    font-size: 14px;
+    font-size: 1rem;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 1.143rem;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1em white, 0 0 0 0.25em #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-    margin-bottom: 60px;
+    margin-bottom: 3.5714%;
     font-family: 'Myriad W01 Regular';
 }
 
@@ -31,10 +31,10 @@ table {
     width: 100%;
 }
 
-table, th, td{
+table, th, td {
     border-collapse: collapse;
-    border: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+    border: 0.0714em solid #ddd;
+    border-bottom: 0.0714em solid #ddd;
     text-align: center;
 }
 
@@ -48,9 +48,10 @@ td, th {
     width: 20%;
 }
 
-tr:hover td:not(#deviceDetails, .delete-column){
-        background-color: #c2e189 !important;
-    }
+tr:hover td:not(#deviceDetails, .delete-column) {
+    background-color: #c2e189 !important;
+}
+
 table tr:nth-of-type(even) {
     background-color: #C3D0DB;
 }
@@ -58,23 +59,25 @@ table tr:nth-of-type(even) {
 table tr:nth-of-type(odd) {
     background-color: #fff;
 }
-th{
+
+th {
     text-align: center;
     background-color: #789d4a;
     color: white;
 }
+
 .body {
-    height: 100px;
-    overflow: auto
+    height: 7.143%;
+    overflow: auto;
 }
 
 a {
     text-decoration: none;
 }
 
-a:hover:not(#deviceDetails){
-    text-decoration: underline;
-}
+    a:hover:not(#deviceDetails) {
+        text-decoration: underline;
+    }
 
 #index-header {
     display: flex;
@@ -83,8 +86,6 @@ a:hover:not(#deviceDetails){
     max-width: 100% !important;
 }
 
-
-
 .input-group {
     width: 40%;
 }
@@ -92,28 +93,27 @@ a:hover:not(#deviceDetails){
 #deviceSearch {
     background: url(/fontawesome/svgs/solid/search.svg) no-repeat;
     display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 3.5714%;
+    height: 3.5714%;
     position: relative;
-    left: -30px;
+    left: -3.5714%;
 }
 
 #index-header input[type="text"] {
-  margin: 0 0 0 60px;
-  height: 30px;
+    margin: 0 0 0 8.5714%;
+    height: 3.5714%;
 }
 
 .delete-column {
-    width: 1%;
+    width: 0.0714%;
 }
 
 #deviceDetails {
-    float: left;
     width: 50%;
 }
 
 #deviceDetails th {
-    width: 8%;
+    width: 14%;
     text-align: left;
 }
 
@@ -122,12 +122,9 @@ a:hover:not(#deviceDetails){
 }
 
 #imageChecklist {
-    height: 190px ;
-    float: right;
-    margin-right: 250px;
+    height: 26.7857%;;
 }
 
-#details h4 {
+.DetailsView {
     display: inline-block;
-    padding-inline: 220px;
 }
