--- a/CIM/CIM/Pages/Shared/_Layout.cshtml
+++ b/CIM/CIM/Pages/Shared/_Layout.cshtml
@@ -12,14 +12,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3" style="background-color: rgba(120,157,74,0.7);">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Home</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index" style=" color: rgb(151,27,47);">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" asp-area="" asp-page="/Devices/Deleted">Deleted Devices</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Devices/Deleted" style="color: rgb(151,27,47);">Deleted Devices</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
