--- a/CIM/CIM/Pages/Devices/Edit.cshtml
+++ b/CIM/CIM/Pages/Devices/Edit.cshtml
@@ -14,6 +14,21 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Device.Id" />
+            <div class="form-group form-check" hidden disabled>
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Device.IsDeleted" /> @Html.DisplayNameFor(model => model.Device.IsDeleted)
+                </label>
+            </div>
+            <div class="form-group form-check" hidden disabled>
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Device.IsDeployed" /> @Html.DisplayNameFor(model => model.Device.IsDeployed)
+                </label>
+            </div>
+            <div class="form-group" hidden disabled>
+                <label asp-for="Device.DeletedAt" class="control-label"></label>
+                <input asp-for="Device.DeletedAt" class="form-control" />
+                <span asp-validation-for="Device.DeletedAt" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Device.Name" class="control-label"></label>
                 <input asp-for="Device.Name" class="form-control" />
@@ -24,6 +39,26 @@
                 <input asp-for="Device.ServiceTag" class="form-control" />
                 <span asp-validation-for="Device.ServiceTag" class="text-danger"></span>
             </div>
+            <div class="form-group" hidden disabled>
+                <label asp-for="Device.OU" class="control-label"></label>
+                <input asp-for="Device.OU" class="form-control" />
+                <span asp-validation-for="Device.OU" class="text-danger"></span>
+            </div>
+            <div class="form-group" hidden disabled>
+                <label asp-for="Device.PU" class="control-label"></label>
+                <input asp-for="Device.PU" class="form-control" />
+                <span asp-validation-for="Device.PU" class="text-danger"></span>
+            </div>
+            <div class="form-group" hidden disabled>
+                <label asp-for="Device.Status" class="control-label"></label>
+                <input asp-for="Device.Status" class="form-control" />
+                <span asp-validation-for="Device.Status" class="text-danger"></span>
+            </div>
+            <div class="form-group"hidden disabled>
+                <label asp-for="Device.ImagingStepJson" class="control-label"></label>
+                <input asp-for="Device.ImagingStepJson" class="form-control" />
+                <span asp-validation-for="Device.ImagingStepJson" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -32,7 +67,7 @@
 </div>
 
 <div>
-    <a asp-page="/Devices/Details" asp-route-id=@Model.Device.Id>Back to List</a>
+    <a asp-page="/Devices/Details" asp-route-id=@Model.Device.Name>Back to List</a>
 </div>
 
 @section Scripts {
