--- a/CIM/CIM/Pages/PreviousIssues/Edit.cshtml
+++ b/CIM/CIM/Pages/PreviousIssues/Edit.cshtml
@@ -43,7 +43,7 @@
 </div>
 
 <div>
-    <a asp-page="/Devices/Details" asp-route-id=@Model.PreviousIssue.DeviceId>Back to List</a>
+    <a asp-page="/Devices/Details" asp-route-id=@Model.PreviousIssue.Device.Name>Back to List</a>
 </div>
 
 @section Scripts {
