--- a/CIM/CIM/Pages/PreviousIssues/Create.cshtml
+++ b/CIM/CIM/Pages/PreviousIssues/Create.cshtml
@@ -42,7 +42,7 @@
 </div>
 
 <div>
-    <a asp-page="/Devices/Details" asp-route-id="@Model.deviceName">Back to List</a>
+    <a asp-page="/Devices/Details" asp-route-id="@Model.PreviousIssue.Device.Name">Back to List</a>
 </div>
 
 @section Scripts {
